<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="firstTextView">0</string>
    <string name="secondTextView">0</string>
    <string name="firstButton">Press Me!</string>
    <string name="secondButton">Press Me, Too!</string>
    <string name="title_activity_practical_test01_secondary">PracticalTest01SecondaryActivity</string>
    <string name="clickSumTextView">0</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="navigateButton">Navigate to secondary activity</string>

</resources>
