<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest01.PracticalTest01MainActivity" >

    <Button
        android:id="@+id/navigateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right"
        android:text="@string/navigateButton" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/navigateButton"
        android:weightSum="2" >

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/firstTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:saveEnabled="false"
                android:text="@string/firstTextView" />

            <Button
                android:id="@+id/firstButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstTextView"
                android:layout_gravity="center"
                android:text="@string/firstButton" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/secondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:saveEnabled="false"
                android:text="@string/secondTextView" />

            <Button
                android:id="@+id/secondButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secondTextView"
                android:layout_gravity="center"
                android:text="@string/secondButton" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>